--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-342.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-482.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-900.4KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇬🇧 英国-513.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-475.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-531.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-411.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-482.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-836.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-385.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-740.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-342.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-513.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-475.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-681.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-411.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-836.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
