--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇬🇧 英国-727.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-535.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-898.7KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-350.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-646.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-450.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-330.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-398.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-563.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-727.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-535.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-646.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-822.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-846.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-398.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
